--- a/src/app/upgrade/upgrade.component.html
+++ b/src/app/upgrade/upgrade.component.html
@@ -1,5 +1,5 @@
 <div class="upgradeContainer">
-	<div class="upgradeMain" *ngFor="let upgrade of this.gs.upgrades; let i = index;" (click)="clicked(i)">
+	<div class="upgradeMain" *ngFor="let upgrade of this.gs.upgrades; let i = index;" (click)="clicked(i)" [hidden]="!this.showUpgrade(i)">
 		<div class="leftColumn"></div>
 		<div class="rightColumn"></div>
 		<img id="upg_icon" src="{{ upgrade.icon }}" />
