--- a/src/app/structure/structure.component.html
+++ b/src/app/structure/structure.component.html
@@ -6,9 +6,9 @@
 				<img id="str_icon" src="{{ str.icon }}" />
 				<div id="name">{{ str.name }}</div>
 				<div id="description" class="hiddenContent">{{ str.description}}</div>
-				<div id="production">+{{str.production_rate}} cebul/s</div>
+				<div id="production">+{{this.gs.formatedOnionValue(str.production_rate)}} cebul/s</div>
 				<div id="priceIcon" class="hiddenContent"></div>
-				<div id="price" class="hiddenContent">{{ this.priceForLevel(i) }}</div>
+				<div id="price" class="hiddenContent">{{ this.gs.formatedOnionValue(this.priceForLevel(i)) }}</div>
 				
 				<div id="numOfStructures">
 					{{ this.gs.numOfStructure(str.system_id) }}
