--- a/src/app/achievements/achievements.component.html
+++ b/src/app/achievements/achievements.component.html
@@ -1,3 +1,17 @@
-<p>
-  achievements works!
-</p>
+<div id="achievementsMain">
+	<div id="topFrame" class="horizontalFrame"></div>
+	<div id="bottomFrame" class="horizontalFrame"></div>
+	<div id="leftFrame" class="verticalFrame"></div>
+	<div id="rightFrame" class="verticalFrame"></div>
+	
+	<div id="leftTop1Corner" class="corner"></div>
+	<div id="leftTop2Corner" class="corner"></div>
+	<div id="rightTop1Corner" class="corner"></div>
+	<div id="rightTop2Corner" class="corner"></div>
+	<div id="leftBottomCorner" class="corner"></div>
+	<div id="rightBottomCorner" class="corner"></div>
+	
+	<div id="achievementsContent">
+
+	</div>
+</div>
