--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
   color: #91522c;
-  background: #c3f1fe; /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(#c3f1fe, #f1feff); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(#c3f1fe, #f1feff); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(#c3f1fe, #f1feff); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(#c3f1fe, #f1feff); /* Standard syntax */
   height: 2500px;
   overflow-x: hidden;
 }
@@ -18,6 +13,19 @@ body {
   -ms-user-select: none; /* Internet Explorer/Edge */
   user-select: none;
   /* Non-prefixed version, currently supported by Chrome and Opera */
+}
+
+
+#bodypaint{
+  background: #c3f1fe;    /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(#c3f1fe, #f1feff);
+  background: -o-linear-gradient(#c3f1fe, #f1feff);
+  background: -moz-linear-gradient(#c3f1fe, #f1feff);
+  background: linear-gradient(#c3f1fe, #f1feff);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 0;
 }
 
 #grassContainer {
