--- a/src/app/structure/structure.component.html
+++ b/src/app/structure/structure.component.html
@@ -1,5 +1,5 @@
 <div class="center">
-	<div class="structureContainer">
+	<div class="structureContainer noselect" >
 			<div class="structureMain" *ngFor="let str of this.gs.structures; let i = index;" (click)="clicked(i)" [hidden]="!this.showStructure(i)" >
 				<div class="leftColumn"></div>
 				<div class="rightColumn"></div>
