Usunięcie zmiany kursora na tekstowy wszędzie gdzie ten problem występował

--- a/src/app/onion/onion.component.html
+++ b/src/app/onion/onion.component.html
@@ -1,5 +1,5 @@
 <div class="center">
-  <div id="mainOnionContainer">
+  <div id="mainOnionContainer" class="noIbar">
 	<div id="mainOnion" style="background-image: url('assets/onion_glow.svg')" (click)="clicked($event)" (mousedown)="mousedown()" (mouseup)="mouseup()"></div>
   
 	  <!--(mousedown)="mousedown()" (mouseup)="mouseup()"></div>-->
