--- a/src/app/statistics/statistics.component.html
+++ b/src/app/statistics/statistics.component.html
@@ -13,19 +13,19 @@
 	
 	<div id="statisticsContent">
 		<div id="containerLabel"></div>
-		<div id="numberOfCliksLabel" class="labelDiv textDiv">Kliknięcia w cebule:</div>
-		<div id="numberOfCliksValue" class="textDiv">{{this.gs.formatedOnionValue(this.gs.statisticsValue.number_of_clicks) }}</div>
-		<div id="numberOfTookOnionsLabel" class="textDiv">Łącznie zebrane cebule:</div>
-		<div id="numberOfTookOnionsValue" class="textDiv">{{ this.gs.printOnions(this.gs.statisticsValue.collected_cash)}}</div>
-		<div id="numberOfTookOnionsByClickLabel" class="textDiv">Cebule zebrane kliknięciem:</div>
-		<div id="numberOfTookOnionsByClickValue" class="textDiv">{{this.gs.formatedOnionValue(this.gs.statisticsValue.cach_from_clicks)}}</div>
-		<div id="numberOfSpendOnionsLabel" class="textDiv">Łącznie wydane cebule:</div>
-		<div id="numberOfSpendOnionsValue" class="textDiv">{{this.gs.formatedOnionValue(this.gs.statisticsValue.spent_cash)}}</div>
-		<div id="numberOfStructuresLabel" class="textDiv">Kupione struktury:</div>
-		<div id="numberOfStructuresValue" class="textDiv">{{this.gs.numOfAllStructures()}}</div>
-		<div id="numberOfUpgradesLabel" class="textDiv">Kupione ulepszenia:</div>
-		<div id="numberOfUpgradesValue" class="textDiv">{{this.gs.numOfAllUpgrades()}}</div>
-		<div id="numberOfDateLabel" class="textDiv">Rozpoczęcie przygody:</div>
-		<div id="numberOfDateValue" class="textDiv">{{this.gs.getStartDate()}}</div>
+		<div id="numberOfCliksLabel" class="labelDiv textDiv noselect noIbar">Kliknięcia w cebule:</div>
+		<div id="numberOfCliksValue" class="textDiv noselect noIbar">{{this.gs.formatedOnionValue(this.gs.statisticsValue.number_of_clicks) }}</div>
+		<div id="numberOfTookOnionsLabel" class="textDiv noselect noIbar">Łącznie zebrane cebule:</div>
+		<div id="numberOfTookOnionsValue" class="textDiv noselect noIbar">{{ this.gs.printOnions(this.gs.statisticsValue.collected_cash)}}</div>
+		<div id="numberOfTookOnionsByClickLabel" class="textDiv noselect noIbar">Cebule zebrane kliknięciem:</div>
+		<div id="numberOfTookOnionsByClickValue" class="textDiv noselect noIbar">{{this.gs.formatedOnionValue(this.gs.statisticsValue.cach_from_clicks)}}</div>
+		<div id="numberOfSpendOnionsLabel" class="textDiv noselect noIbar">Łącznie wydane cebule:</div>
+		<div id="numberOfSpendOnionsValue" class="textDiv noselect noIbar">{{this.gs.formatedOnionValue(this.gs.statisticsValue.spent_cash)}}</div>
+		<div id="numberOfStructuresLabel" class="textDiv noselect noIbar">Kupione struktury:</div>
+		<div id="numberOfStructuresValue" class="textDiv noselect noIbar">{{this.gs.numOfAllStructures()}}</div>
+		<div id="numberOfUpgradesLabel" class="textDiv noselect noIbar">Kupione ulepszenia:</div>
+		<div id="numberOfUpgradesValue" class="textDiv noselect noIbar">{{this.gs.numOfAllUpgrades()}}</div>
+		<div id="numberOfDateLabel" class="textDiv noselect noIbar">Rozpoczęcie przygody:</div>
+		<div id="numberOfDateValue" class="textDiv noselect noIbar">{{this.gs.getStartDate()}}</div>
 	</div>
 </div>
