zmiana layoutu ulepszeń, zmiana ikonek do dźwięku

--- a/src/app/upgrade/upgrade.component.html
+++ b/src/app/upgrade/upgrade.component.html
@@ -5,9 +5,10 @@
 		<img id="upg_icon" src="{{ upgrade.icon }}" />
 		<div id="name">{{ upgrade.name }}</div>
 		<div id="description" class="hiddenContent">{{ upgrade.description}}</div>
-		<div id="multiplier" class="hiddenContent">Mnożnik: {{upgrade.multiplier}}</div>
-		<div id="price" class="hiddenContent">Cena: {{ this.gs.formatedOnionValue(this.boughtPrize(upgrade.base_prize)) }} cebul</div>
-		<div id="bought" [hidden]="!this.isBoughtById(upgrade.system_id)"></div>
+		<div id="multiplier"><div id="multiplierCursor" class="inline"></div><div class="inline">{{upgrade.multiplier}}</div></div>
+		<div id="priceIcon" class="hiddenContent"></div>
+		<div id="price" class="hiddenContent">{{ this.gs.formatedOnionValue(this.boughtPrize(upgrade.base_prize)) }}</div>
+		<!-- <div id="bought" [hidden]="!this.isBoughtById(upgrade.system_id)"></div> -->
 	  <div class="woodenRow"></div>
 	</div>
 </div>
