--- a/src/styles.css
+++ b/src/styles.css
@@ -19,6 +19,17 @@ body {
   cursor: default;
 }
 
+ .soundsBtn
+ {
+	height: 20px;
+	width: 20px;
+ }
+ 
+ #sndOff
+ {
+	display: none;
+ }
+
 #bodypaint{
   background: #c3f1fe;    /* For browsers that do not support gradients */
   background: -webkit-linear-gradient(#c3f1fe, #f1feff);
