--- a/src/app/achievements/achievements.component.css
+++ b/src/app/achievements/achievements.component.css
@@ -1,137 +1,118 @@
-#achievementsMain
-{
-	width: 600px;
-	height: 600px;
+#achievementsMain {
+  width: 600px;
+  height: 600px;
 }
 
-#achievementsContent
-{
-	position: absolute;
-	width: 580px;
-	height: 570px;
-	left: 10px;
-	top: 20px;
-	background-color: #fdf5e0;
+#achievementsContent {
+  position: absolute;
+  width: 580px;
+  height: 570px;
+  left: 10px;
+  top: 20px;
+  background-color: #fdf5e0;
 }
 
-#topFrame
-{
-	top: 0px;
-	height: 40px;
+#topFrame {
+  top: 0;
+  height: 40px;
 }
 
-#bottomFrame
-{
-	bottom: 0px;
-	height: 20px;
+#bottomFrame {
+  bottom: 0;
+  height: 20px;
 }
 
-#leftFrame
-{
-	left: 0px;
+#leftFrame {
+  left: 0;
 }
 
-#rightFrame
-{
-	right: 0px;
+#rightFrame {
+  right: 0;
 }
 
-.horizontalFrame
-{
-	position: absolute;
-	width: 585px;
-	background-image: url("../../assets/horizontal.png");
-	background-size: contain;
-	z-index: 10;
-	margin-top: -2px;
-	margin-bottom: -2px;
-	margin-left: 7px;
-	margin-right: 14px;
+.horizontalFrame {
+  position: absolute;
+  width: 585px;
+  background-image: url("../../assets/horizontal.png");
+  background-size: contain;
+  z-index: 10;
+  margin: -2px 14px -2px 7px;
 }
 
-.verticalFrame
-{
-	position: absolute;
-	width: 15px;
-	height: 570px;
-	background-image: url("../../assets/vertical.png");
-	background-size: contain;
-	margin-left: -2px;
-	margin-right: -2px;
-	z-index: 5;
-	margin-top: 25px;
+.verticalFrame {
+  position: absolute;
+  width: 15px;
+  height: 570px;
+  background-image: url("../../assets/vertical.png");
+  background-size: contain;
+  margin-left: -2px;
+  margin-right: -2px;
+  z-index: 5;
+  margin-top: 25px;
 }
 
-#leftTop1Corner
-{
-	left: 0px;
-	top: 0px;
-	margin-left: -5px;
-	margin-top: -3px;
-	width: 22px;
-	height: 22px;
+#leftTop1Corner {
+  left: 0;
+  top: 0;
+  margin-left: -5px;
+  margin-top: -3px;
+  width: 22px;
+  height: 22px;
 }
 
-#leftTop2Corner
-{
-	left: 0px;
-	top: 20px;
-	margin-left: -5px;
-	margin-top: -2px;
-	width: 22px;
-	height: 22px;
+#leftTop2Corner {
+  left: 0;
+  top: 20px;
+  margin-left: -5px;
+  margin-top: -2px;
+  width: 22px;
+  height: 22px;
 }
 
-#rightTop1Corner
-{
-	right: 0px;
-	top: 0px;
-	margin-right: -5px;
-	margin-top: -3px;
-	width: 22px;
-	height: 22px;
+#rightTop1Corner {
+  right: 0;
+  top: 0;
+  margin-right: -5px;
+  margin-top: -3px;
+  width: 22px;
+  height: 22px;
 }
 
-#rightTop2Corner
-{
-	right: 0px;
-	top: 20px;
-	margin-right: -5px;
-	margin-top: -2px;
-	width: 22px;
-	height: 22px;
+#rightTop2Corner {
+  right: 0;
+  top: 20px;
+  margin-right: -5px;
+  margin-top: -2px;
+  width: 22px;
+  height: 22px;
 }
 
-#leftBottomCorner
-{
-	left: 0px;
-	bottom: 0px;
-	margin-left: -6px;
-	margin-bottom: -2px;
-	width: 22px;
-	height: 22px;
+#leftBottomCorner {
+  left: 0;
+  bottom: 0;
+  margin-left: -6px;
+  margin-bottom: -2px;
+  width: 22px;
+  height: 22px;
 }
 
-#rightBottomCorner
-{
-	right: 0px;
-	bottom: 0px;
-	margin-right: -6px;
-	margin-bottom: -2px;
-	width: 22px;
-	height: 22px;
+#rightBottomCorner {
+  right: 0;
+  bottom: 0;
+  margin-right: -6px;
+  margin-bottom: -2px;
+  width: 22px;
+  height: 22px;
 }
 
-.corner
-{
-	position: absolute;
-	background-image: url("../../assets/trunk.svg");
-	background-size: contain;
-	z-index: 15;	
+.corner {
+  position: absolute;
+  background-image: url("../../assets/trunk.svg");
+  background-size: contain;
+  z-index: 15;
 }
 
-@font-face 
-{
+@font-face {
   font-family: 'lovemonster';
   src: url('../../assets/lovemonster.ttf') format('ttf'),
   url('../../assets/lovemonster.ttf') format('truetype'); /* Safari, Android, iOS */
