--- a/src/app/structure/structure.component.css
+++ b/src/app/structure/structure.component.css
@@ -4,42 +4,36 @@
 }
 
 .noIbar {
-	cursor:default;
+  cursor: default;
 }
 
-.structureMain
-{
-	position: relative;
-	background-color: fdf5e0;
-	height: 95px;
-	width: 550px;
-	color: #9a6d38;
-	padding-top: 15px;
-	font-family: lovemonster;
+.structureMain {
+  position: relative;
+  background-color: #fdf5e0;
+  height: 95px;
+  width: 550px;
+  color: #9a6d38;
+  padding-top: 15px;
+  font-family: lovemonster, sans-serif;
 }
 
-.structureMain:hover > #name
-{
-	display: none;
+.structureMain:hover > #name {
+  display: none;
 }
 
-.structureMain > .hiddenContent
-{
-	display: none;
+.structureMain > .hiddenContent {
+  display: none;
 }
 
-.structureMain:hover > .hiddenContent
-{
-	display: inline;
+.structureMain:hover > .hiddenContent {
+  display: inline;
 }
 
-
-.structureContainer
-{
-	position: relative;
-	margin-bottom: -35px;
-	margin-top: -15px;
-	top: -17px;
+.structureContainer {
+  position: relative;
+  margin-bottom: -35px;
+  margin-top: -15px;
+  top: -17px;
 }
 
 @font-face {
@@ -48,99 +42,88 @@
   url('../../assets/lovemonster.ttf') format('truetype'); /* Safari, Android, iOS */
 }
 
-.leftColumn
-{
-	width: 15px;
-	height: 100%;
-	background-image: url("../../assets/vertical.png");
-	background-size: contain;
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	z-index: 9;
+.leftColumn {
+  width: 15px;
+  height: 100%;
+  background-image: url("../../assets/vertical.png");
+  background-size: contain;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 9;
 }
 
-.rightColumn
-{
-	width: 15px;
-	height: 100%;
-	background-image: url("../../assets/vertical.png");
-	background-size: contain;
-	position: absolute;
-	top: 0px;
-	right: 0px;
-	z-index: 9;
+.rightColumn {
+  width: 15px;
+  height: 100%;
+  background-image: url("../../assets/vertical.png");
+  background-size: contain;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 9;
 }
 
-.woodenRow
-{
-	position: absolute;
-	background-image: url("../../assets/horizontal.png");
-	background-size: contain;
-	width: 100%;
-	height: 15px;
-	top: 0px;
-	z-index: 8;
+.woodenRow {
+  position: absolute;
+  background-image: url("../../assets/horizontal.png");
+  background-size: contain;
+  width: 100%;
+  height: 15px;
+  top: 0;
+  z-index: 8;
 }
 
-#name
-{
-	position: absolute;
-	left: 105px;
-	top: 25px;
-	font-size: 45px;
+#name {
+  position: absolute;
+  left: 105px;
+  top: 25px;
+  font-size: 45px;
 }
 
-#description
-{
-	position: absolute;
-	left: 105px;
-	top: 30px;
-	font-size: 23px;
-	//font-weight: bold;
+#description {
+  position: absolute;
+  left: 105px;
+  top: 30px;
+  font-size: 23px;
+/ / font-weight: bold;
 }
 
-#numOfStructures
-{
-	position: absolute;
-	right: 30px;
-	top: 15px;
-	font-size: 45px;
+#numOfStructures {
+  position: absolute;
+  right: 30px;
+  top: 15px;
+  font-size: 45px;
 }
 
-#price
-{
-	position: absolute;
-	left: 125px;
-	top: 52px;
-	font-size: 23px;	
+#price {
+  position: absolute;
+  left: 125px;
+  top: 52px;
+  font-size: 23px;
 }
 
-#priceIcon
-{
-	position: absolute;
-	width: 11px;
-	height: 18px;
-	left: 107px;
-	top: 57px;
-	background-image: url("../../assets/onion_overlay.svg");
-	background-size: contain;
-	background-repeat: no-repeat;
+#priceIcon {
+  position: absolute;
+  width: 11px;
+  height: 18px;
+  left: 107px;
+  top: 57px;
+  background-size: contain;
+  background: url("../../assets/onion_overlay.svg") no-repeat;
 }
 
-#production
-{
-	position: absolute;
-	right: 30px;
-	top: 60px;
-	font-size: 20px;
+#production {
+  position: absolute;
+  right: 30px;
+  top: 60px;
+  font-size: 20px;
 }
 
-#str_icon
-{
-	position: absolute;
-	top: 30px;
-	left: 30px;
-	width: 55px;
-	height: 55px;
+#str_icon {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  width: 55px;
+  height: 55px;
 }
