--- a/src/app/upgrade/upgrade.component.css
+++ b/src/app/upgrade/upgrade.component.css
@@ -1,77 +1,69 @@
-.upgradeMain
-{
-	position: relative;
-	background-color: #fdf5e0;
-	height: 95px;
-	width: 550px;
-	color: #9a6d38;
-	padding-top: 15px;
-	font-family: lovemonster;
+.upgradeMain {
+  position: relative;
+  background-color: #fdf5e0;
+  height: 95px;
+  width: 550px;
+  color: #9a6d38;
+  padding-top: 15px;
+  font-family: lovemonster, sans-serif;
 }
 
-#name
-{
-	position: absolute;
-	left: 105px;
-	top: 25px;
-	font-size: 45px;
+#name {
+  position: absolute;
+  left: 105px;
+  top: 25px;
+  font-size: 45px;
 }
 
-#description
-{
-	position: absolute;
-	left: 105px;
-	top: 25px;
-	font-size: 20px;
-	font-weight: bold;
+#description {
+  position: absolute;
+  left: 105px;
+  top: 25px;
+  font-size: 20px;
+  font-weight: bold;
 }
 
-#upg_icon
-{
-	position: absolute;
-	top: 30px;
-	left: 30px;
-	width: 55px;
-	height: 55px;
+#upg_icon {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  width: 55px;
+  height: 55px;
 }
 
-#price
-{
-	position: absolute;
-	left: 105px;
-	top: 70px;
-	font-size: 20px;	
+#price {
+  position: absolute;
+  left: 105px;
+  top: 70px;
+  font-size: 20px;
 }
 
-#multiplier
-{
-	position: absolute;
-	left: 105px;
-	top: 45px;
-	font-size: 20px;
-	font-style: italic;
+#multiplier {
+  position: absolute;
+  left: 105px;
+  top: 45px;
+  font-size: 20px;
+  font-style: italic;
 }
 
-#bought
-{
-	position: absolute;
-	background-image: url("../../assets/onion_glow.svg");
-	background-size: contain;
-	left: 460px;
-	top: 5px;
-	width: 100px;
-	height: 100px;
+#bought {
+  position: absolute;
+  background-image: url("../../assets/onion_glow.svg");
+  background-size: contain;
+  left: 460px;
+  top: 5px;
+  width: 100px;
+  height: 100px;
 }
 
-.upgradeContainer
-{
-	position: relative;
-	margin-bottom: -34px;
-	margin-top: -15px;
-	top: -17px;
-	//height: 350px;
-	//overflow-y: scroll;
-	//overflow-x: hidden;
+.upgradeContainer {
+  position: relative;
+  margin-bottom: -34px;
+  margin-top: -15px;
+  top: -17px;
+  height: 350px;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 @font-face {
@@ -80,52 +72,46 @@
   url('../../assets/lovemonster.ttf') format('truetype'); /* Safari, Android, iOS */
 }
 
-.leftColumn
-{
-	width: 15px;
-	height: 100%;
-	background-image: url("../../assets/vertical.png");
-	background-size: contain;
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	z-index: 9;
+.leftColumn {
+  width: 15px;
+  height: 100%;
+  background-image: url("../../assets/vertical.png");
+  background-size: contain;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 9;
 }
 
-.rightColumn
-{
-	width: 15px;
-	height: 100%;
-	background-image: url("../../assets/vertical.png");
-	background-size: contain;
-	position: absolute;
-	top: 0px;
-	right: 0px;
-	z-index: 9;
+.rightColumn {
+  width: 15px;
+  height: 100%;
+  background-image: url("../../assets/vertical.png");
+  background-size: contain;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 9;
 }
 
-.woodenRow
-{
-	position: absolute;
-	background-image: url("../../assets/horizontal.png");
-	background-size: contain;
-	width: 100%;
-	height: 15px;
-	top: 0px;
-	z-index: 8;
+.woodenRow {
+  position: absolute;
+  background-image: url("../../assets/horizontal.png");
+  background-size: contain;
+  width: 100%;
+  height: 15px;
+  top: 0;
+  z-index: 8;
 }
 
-.upgradeMain:hover > #name
-{
-	display: none;
+.upgradeMain:hover > #name {
+  display: none;
 }
 
-.upgradeMain > .hiddenContent
-{
-	display: none;
+.upgradeMain > .hiddenContent {
+  display: none;
 }
 
-.upgradeMain:hover > .hiddenContent
-{
-	display: inline;
+.upgradeMain:hover > .hiddenContent {
+  display: inline;
 }
