poprawka do ulepszen

--- a/src/app/upgrade/upgrade.component.html
+++ b/src/app/upgrade/upgrade.component.html
@@ -1,4 +1,4 @@
-<div class="upgradeContainer">
+<div class="upgradeContainer noselect noIbar">
 	<div class="upgradeMain" *ngFor="let upgrade of this.gs.upgrades; let i = index;" (click)="clicked(i)" [hidden]="!this.showUpgrade(i)">
 		<div class="leftColumn"></div>
 		<div class="rightColumn"></div>
