--- a/src/app/structure/structure.component.css
+++ b/src/app/structure/structure.component.css
@@ -34,6 +34,27 @@
   margin-bottom: -35px;
   margin-top: -15px;
   top: -17px;
+  height: 285px;
+  width: 549px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+#style::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #fdf5e0;
+}
+
+#style::-webkit-scrollbar
+{
+	width: 15px;
+}
+
+#style::-webkit-scrollbar-thumb
+{
+  background-image: url("../../assets/vertical.png");
+  background-size: contain;
 }
 
 @font-face {
