--- a/src/app/upgrade/upgrade.component.css
+++ b/src/app/upgrade/upgrade.component.css
@@ -12,9 +12,28 @@
   background-color: #fdf5e0;
   height: 95px;
   width: 550px;
-  color: #9a6d38;
   padding-top: 15px;
   font-family: lovemonster, sans-serif;
+}
+
+.boughtColor
+{
+	color: #9a6d38;
+}
+
+.notBoughtColor
+{
+	color: #ab804e;
+	//color: gray;
+}
+
+.notBoughtImage
+{
+	-webkit-filter: brightness(1.2);
+	-moz-filter: brightness(1.2);
+	-o-filter: brightness(1.2);
+	-ms-filter: brightness(1.2);
+	filter: brightness(1.2);
 }
 
 #name {
@@ -91,9 +110,8 @@
   margin-bottom: -34px;
   margin-top: -15px;
   top: -17px;
-  height: 285px;
+  max-height: 285px;
   width: 549px;
-  overflow-y: scroll;
   overflow-x: hidden;
 }
 
