--- a/src/app/upgrade/upgrade.component.html
+++ b/src/app/upgrade/upgrade.component.html
@@ -1,13 +1,13 @@
 <div class="upgradeContainer noselect noIbar" id="style">
   <div class="force-overflow"></div>
-	<div class="upgradeMain" *ngFor="let upgrade of this.gs.upgrades; let i = index;" (click)="clicked(i)" [hidden]="!this.showUpgrade(i)">
+	<div class="upgradeMain" [ngClass]="(this.isBoughtById(upgrade.system_id))?'boughtColor':'notBoughtColor'" *ngFor="let upgrade of this.gs.upgrades; let i = index;" (click)="clicked(i)" [hidden]="!this.showUpgrade(i)">
 		<div class="leftColumn"></div>
 		<div class="rightColumn"></div>
-		<img id="upg_icon" src="{{ upgrade.icon }}" />
+		<img id="upg_icon" [ngClass]="{'notBoughtImage': !this.isBoughtById(upgrade.system_id)}" src="{{ upgrade.icon }}" />
 		<div id="name">{{ upgrade.name }}</div>
 		<div id="description" class="hiddenContent">{{ upgrade.description}}</div>
-		<div id="multiplier"><div id="multiplierCursor" class="inline"></div><div class="inline">{{upgrade.multiplier}}</div></div>
-		<div id="priceIcon" class="hiddenContent"></div>
+		<div id="multiplier"><div id="multiplierCursor" [ngClass]="{'notBoughtImage': !this.isBoughtById(upgrade.system_id)}" class="inline"></div><div class="inline">{{upgrade.multiplier}}</div></div>
+		<div id="priceIcon" [ngClass]="{'notBoughtImage': !this.isBoughtById(upgrade.system_id)}" class="hiddenContent"></div>
 		<div id="price" class="hiddenContent">{{ this.gs.formatedOnionValue(this.boughtPrize(upgrade.base_prize)) }}</div>
 		<!-- <div id="bought" [hidden]="!this.isBoughtById(upgrade.system_id)"></div> -->
 	  <div class="woodenRow"></div>
