--- a/src/app/achievements/achievements.component.html
+++ b/src/app/achievements/achievements.component.html
@@ -4,14 +4,20 @@
 	<div id="leftFrame" class="verticalFrame"></div>
 	<div id="rightFrame" class="verticalFrame"></div>
 
-  <div id="leftTop1Corner" class="corner"></div>
+	<div id="leftTop1Corner" class="corner"></div>
 	<div id="leftTop2Corner" class="corner"></div>
 	<div id="rightTop1Corner" class="corner"></div>
 	<div id="rightTop2Corner" class="corner"></div>
 	<div id="leftBottomCorner" class="corner"></div>
 	<div id="rightBottomCorner" class="corner"></div>
 
-  <div id="achievementsContent">
-
+	<div id="achievementsContent">
+		<div class="achievement" *ngFor="let ach of this.gs.achievements; let i = index;" (mouseover)="onMouseover($event)">
+			<img class="achievementIcon" src="{{ach.icon}}" />
+		</div>
+	</div>
+	
+	<div id="infoBox">
+		AAAAAAA
 	</div>
 </div>
