--- a/src/app/achievements/achievements.component.css
+++ b/src/app/achievements/achievements.component.css
@@ -156,6 +156,8 @@
 	border-top-right-radius: 10px;
 	border-bottom-right-radius: 10px;
 	z-index: 1000;
+	font-family: lovemonster;
+	font-size: 20px;
 }
 
 #infoTitle
@@ -163,11 +165,18 @@
 	//color: #9a6d38;
 	color: #7a3827;
 	font-weight: bold;
-	margin-bottom: -5px;
+	margin-bottom: -12px;
 }
 
 #infoDescription
 {
 	//color: #7a3827;
 	color: #9a6d38;
+}
+
+.notAchieved
+{
+	opacity: 0.7;
+	-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
 }
