--- a/src/app/achievements/achievements.component.html
+++ b/src/app/achievements/achievements.component.html
@@ -13,7 +13,7 @@
 
 	<div id="achievementsContent">
 		<div class="achievement" *ngFor="let ach of this.gs.achievements; let i = index;" (mouseover)="onMouseover($event, i)" (mouseout)="onMouseout($event)" (mousemove)="onMousemove($event)">
-			<img class="achievementIcon" src="{{ach.icon}}" />
+			<img class="achievementIcon" src="{{ach.icon}}" [ngClass]="{'notAchieved': !this.isAchieved(i)}" />
 		</div>
 	</div>
 	
