--- a/src/app/achievements/achievements.component.css
+++ b/src/app/achievements/achievements.component.css
@@ -180,3 +180,14 @@
 	-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
     filter: grayscale(100%);
 }
+
+#containerLabel {
+  position: absolute;
+  top: -17px;
+  left: 0;
+  width: 100%;
+  height: 31px;
+  background: url("../../assets/osiagniecia.svg") no-repeat center;
+  background-size: contain;
+  z-index: 100;
+}
