--- a/src/app/upgrade/upgrade.component.css
+++ b/src/app/upgrade/upgrade.component.css
@@ -23,17 +23,21 @@
 
 .notBoughtColor
 {
-	color: #ab804e;
+	color: #a98252;
 	//color: gray;
 }
 
 .notBoughtImage
 {
-	-webkit-filter: brightness(1.2);
-	-moz-filter: brightness(1.2);
-	-o-filter: brightness(1.2);
-	-ms-filter: brightness(1.2);
-	filter: brightness(1.2);
+	-webkit-filter: brightness(1.28);
+	-moz-filter: brightness(1.28);
+	-o-filter: brightness(1.28);
+	-ms-filter: brightness(1.28);
+	filter: brightness(1.28);
+	-webkit-filter: grayscale(0.1%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(0.1%);
+	-webkit-filter: opacity(85%); /* Safari */
+    filter: opacity(85%);
 }
 
 #name {
