--- a/src/app/structure/structure.component.css
+++ b/src/app/structure/structure.component.css
@@ -41,8 +41,8 @@
 
 #style::-webkit-scrollbar-track
 {
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	background-color: #fdf5e0;
+	background-image: url("../../assets/vertical.png");
+  background-size: contain;
 }
 
 #style::-webkit-scrollbar
@@ -52,8 +52,10 @@
 
 #style::-webkit-scrollbar-thumb
 {
-  background-image: url("../../assets/vertical.png");
-  background-size: contain;
+  background-color: rgba(253, 245, 224, 0.5);
+  border-radius: 8px;
+  border: 3px solid transparent;
+  background-clip: content-box;
 }
 
 @font-face {
