--- a/src/styles.css
+++ b/src/styles.css
@@ -92,8 +92,8 @@ body {
   left: 50%;
   top: 120px;
   transform: translateX(-50%);
-  min-width: 300px;
-  height: 130px;
+  min-width: 400px;
+  height: 140px;
   background-color: #fdf5e0;
   z-index: 1005;
   border-color: #7a3827;
@@ -106,6 +106,88 @@ body {
   font-size: 20px;
 }
 
+#topFrame {
+  top: 0;
+}
+
+#bottomFrame {
+  bottom: 0;
+}
+
+#leftFrame {
+  left: 0;
+}
+
+#rightFrame {
+  right: 0;
+}
+
+#leftTopCorner {
+  left: 0;
+  top: 0;
+  margin-left: -6px;
+  margin-top: -4px;
+  width: 22px;
+  height: 22px;
+}
+
+#rightTopCorner {
+  right: 0;
+  top: 0;
+  margin-right: -6px;
+  margin-top: -4px;
+  width: 22px;
+  height: 22px;
+}
+
+#leftBottomCorner {
+  left: 0;
+  bottom: 0;
+  margin-left: -6px;
+  margin-bottom: -4px;
+  width: 22px;
+  height: 22px;
+}
+
+#rightBottomCorner {
+  right: 0;
+  bottom: 0;
+  margin-right: -6px;
+  margin-bottom: -4px;
+  width: 22px;
+  height: 22px;
+}
+
+.horizontalFrame {
+  position: absolute;
+  width: 800px;
+  height: 15px;
+  background-image: url("assets/horizontal.png");
+  background-size: contain;
+  z-index: 10;
+  margin-top: -2px;
+  margin-bottom: -2px;
+}
+
+.verticalFrame {
+  position: absolute;
+  width: 15px;
+  height: 115px;
+  background-image: url("assets/vertical.png");
+  background-size: contain;
+  margin-left: -2px;
+  margin-right: -2px;
+  z-index: 5;
+}
+
+.corner {
+  width: 25px;
+  height: 25px;
+  position: absolute;
+  background-image: url("assets/trunk.svg");
+  background-size: contain;
+  z-index: 15;
+}
 #newAchIcon
 {
 	display: inline-block;
