nowy wygląd okna dla zdobytego achievementa, zmiany na liście achievementów

--- a/src/app/achievements/achievements.component.html
+++ b/src/app/achievements/achievements.component.html
@@ -10,12 +10,14 @@
 	<div id="rightTop2Corner" class="corner"></div>
 	<div id="leftBottomCorner" class="corner"></div>
 	<div id="rightBottomCorner" class="corner"></div>
-
-	<div id="achievementsContent">
 	<div id="containerLabel"></div>
 	
-		<div class="achievement" *ngFor="let ach of this.gs.achievements; let i = index;" (mouseover)="onMouseover($event, i)" (mouseout)="onMouseout($event)" (mousemove)="onMousemove($event)">
-			<img class="achievementIcon" src="{{ach.icon}}" [ngClass]="{'notAchieved': !this.isAchieved(i)}" />
+	<div id="achievementsContent">
+		
+		<div id="achievementsBricks">
+			<div class="achievement" *ngFor="let ach of this.gs.achievements; let i = index;" (mouseover)="onMouseover($event, i)" (mouseout)="onMouseout($event)" (mousemove)="onMousemove($event)">
+				<img class="achievementIcon" src="{{ach.icon}}" [ngClass]="{'notAchieved': !this.isAchieved(i)}" />
+			</div>
 		</div>
 	</div>
 	
