--- a/src/app/achievements/achievements.component.css
+++ b/src/app/achievements/achievements.component.css
@@ -1,18 +1,28 @@
 #achievementsMain {
   width: 600px;
   height: 600px;
+  background-color: #fdf5e0;
 }
 
 #achievementsContent {
   position: absolute;
-  width: 580px;
-  height: 570px;
-  left: 10px;
+  left: 0px;
+  height: 580px;
+  overflow-y: scroll;
+  width: 100%;
   top: 20px;
-  background-color: #fdf5e0;
   padding-top: 20px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding: 10px;
+  z-index: 9;
+}
+
+#achievementsBricks
+{
+	position: absolute;
+	left: 40%;
+	width: 60%;
+	margin-bottom: 20px;
+	margin-top: 10px;
 }
 
 #topFrame {
@@ -131,6 +141,7 @@
 	border-style: solid;
 	border-radius: 10px;
 	margin: 10px;
+	margin-left: 20px;
 }
 
 .achievementIcon
@@ -183,7 +194,7 @@
 
 #containerLabel {
   position: absolute;
-  top: -17px;
+  top: 4px;
   left: 0;
   width: 100%;
   height: 31px;
