--- a/src/app/achievements/achievements.component.html
+++ b/src/app/achievements/achievements.component.html
@@ -12,7 +12,7 @@
 	<div id="rightBottomCorner" class="corner"></div>
 	<div id="containerLabel"></div>
 	
-	<div id="achievementsContent">
+	<div class="achievementsContent" id="style">
 		
 		<div id="achievementsGroup">
 			<div *ngFor="let str of this.gs.structures" class="achGroupLabel">
