--- a/src/app/achievements/achievements.component.css
+++ b/src/app/achievements/achievements.component.css
@@ -1,3 +1,17 @@
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none;
+  /* Non-prefixed version, currently supported by Chrome and Opera */
+}
+
+.noIbar {
+  cursor: default;
+}
+
 #achievementsMain {
   width: 600px;
   height: 600px;
@@ -9,7 +23,7 @@
   left: 0px;
   height: 580px;
   overflow-y: scroll;
-  width: 100%;
+  width: 601px;
   top: 20px;
   padding-top: 20px;
   padding: 10px;
@@ -168,18 +182,9 @@
 {
 	display: none;
 	position: absolute;
-	//width: 100px;
-	//height: 40px;
 	background-color: #fdf5e0;
 	top: 130px;
 	left: 130px;
-	border-color: #7a3827;
-	border-style: solid;
-	border-width: 1px;
-	padding: 8px;
-	border-top-left-radius: 10px;
-	border-top-right-radius: 10px;
-	border-bottom-right-radius: 10px;
 	z-index: 1000;
 	font-family: lovemonster;
 	font-size: 20px;
@@ -187,21 +192,24 @@
 
 #infoTitle
 {
-	//color: #9a6d38;
-	color: #7a3827;
-	font-weight: bold;
+	color: #9a6d38;
 	margin-bottom: -12px;
+	font-size: 30px;
+	max-height: 50px;
+	white-space: nowrap;
 }
 
-#infoDescription
+#infoDate
 {
 	//color: #7a3827;
 	color: #9a6d38;
+	font-size: 25px;
+	white-space: nowrap;
 }
 
 .notAchieved
 {
-	opacity: 0.5;
+	opacity: 0.65;
 	//-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
     //filter: grayscale(100%);
 }
@@ -234,4 +242,87 @@
   border-radius: 8px;
   border: 3px solid transparent;
   background-clip: content-box;
+}
+
+#topFrameInfo {
+  top: 0;
+}
+
+#bottomFrameInfo{
+  bottom: 0;
+}
+
+#leftFrameInfo {
+  left: 0;
+}
+
+#rightFrameInfo {
+  right: 0;
+}
+
+.horizontalFrameInfo {
+  position: absolute;
+  width: 100%;
+  height: 8px;
+  background-image: url("../../assets/horizontal_popup.png");
+  background-size: contain;
+  z-index: 10;
+  margin-top: -2px;
+  margin-bottom: -2px;
+}
+
+.verticalFrameInfo {
+  position: absolute;
+  width: 8px;
+  height: 100%;
+  background-image: url("../../assets/vertical_popup.png");
+  background-size: contain;
+  margin-left: -2px;
+  margin-right: -2px;
+  z-index: 5;
+}
+
+#infoContainer
+{
+	padding: 10px;
+	padding-left: 25px;
+	padding-right: 25px;
+	text-align: center;
+}
+
+#leftTopCornerInfo {
+  left: 0;
+  top: 0px;
+  margin-left: -6px;
+  margin-top: -4px;
+}
+
+#rightTopCornerInfo {
+  right: 0;
+  top: 0;
+  margin-right: -6px;
+  margin-top: -4px;
+}
+
+#leftBottomCornerInfo {
+  left: 0;
+  bottom: 0;
+  margin-left: -6px;
+  margin-bottom: -4px;
+}
+
+#rightBottomCornerInfo {
+  right: 0;
+  bottom: 0;
+  margin-right: -6px;
+  margin-bottom: -4px;
+}
+
+.cornerInfo {
+  position: absolute;
+  background-image: url("../../assets/trunk_popup.png");
+  background-size: contain;
+  z-index: 15;
+  width: 14px;
+  height: 14px;
 }
