--- a/src/app/onion/onion.component.html
+++ b/src/app/onion/onion.component.html
@@ -1,6 +1,6 @@
 <div class="center">
   <div id="mainOnionContainer" class="noIbar">
-    <div id="mainOnion" style="background-image: url('assets/onion_glow.svg')" (click)="clicked($event)"></div>
+    <div id="mainOnion" (click)="clicked($event)"></div>
 
     <!--(mousedown)="mousedown()" (mouseup)="mouseup()"></div>-->
     <div id="radialStripes1" style="background-image: url('assets/radial_stripes.svg')"></div>
